建立資料使用 List.of 方法建立